# OMP-Offloading

./: .gitignore
01_accelQuery/: .gitignore
01_accelQuery/src/: CMakeLists.txt
02_dataTransRate/docs/: CMakeLists.txt
02_dataTransRate/src/: CMakeLists.txt
03_taskwait/: CMakeLists.txt
03_taskwait/src/: CMakeLists.txt
04_scalarAddition/src/: CMakeLists.txt
05_saxpy/: CMakeLists.txt  README.md
05_saxpy/cmake/: FindMKL.cmake
05_saxpy/src/: CMakeLists.txt
